<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    app:cardBackgroundColor="@color/lesson_background"
    app:cardCornerRadius="12dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <ImageView
            android:id="@+id/lessonIconImageView"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/lesson_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_travel" />

        <TextView
            android:id="@+id/lessonNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/dark_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/lessonIconImageView"
            app:layout_constraintEnd_toStartOf="@+id/startLessonButton"
            app:layout_constraintStart_toEndOf="@+id/lessonIconImageView"
            app:layout_constraintTop_toTopOf="@+id/lessonIconImageView"
            tools:text="Common Places" />

        <Button
            android:id="@+id/startLessonButton"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:backgroundTint="@color/pine_green_dark"
            android:text="@string/start"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/lessonLockedImageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/locked_content"
            android:src="@drawable/ic_lock"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/startLessonButton"
            app:layout_constraintEnd_toEndOf="@+id/startLessonButton"
            app:layout_constraintStart_toStartOf="@+id/startLessonButton"
            app:layout_constraintTop_toTopOf="@+id/startLessonButton"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/lessonCompletedImageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/completed_lesson"
            android:src="@drawable/ic_completed"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/lessonNameTextView"
            app:layout_constraintEnd_toStartOf="@+id/startLessonButton"
            app:layout_constraintTop_toTopOf="@+id/lessonNameTextView"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView> 